2014-06-29  Alan Mackenzie  <acm@muc.de>

	Don't call c-parse-state when c++-template-syntax-table is active.
	* progmodes/cc-engine.el (c-guess-continued-construct CASE G)
	(c-guess-basic-syntax CASE 5D.3): Rearrange so that
	c-syntactic-skip-backwards isn't called with the pertinent syntax
	table.

2014-06-28  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-set-top-priorities): Fix logic to
	account for file-wide setting of todo-top-priorities-overrides.
	Make code a bit cleaner.

2014-06-28  Glenn Morris  <rgm@gnu.org>

	* net/eww.el (eww-mode) <eww-current-title>: Make local.  (Bug#17860)

2014-06-28  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-prefix-overlays): If there is no
	category-wide setting of todo-top-priorities-overrides, check for
	a file-wide setting and fontify accordingly.

2014-06-28  Glenn Morris  <rgm@gnu.org>

	* subr.el (read-passwd): Warn about batch mode.  (Bug#17839)

2014-06-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/hideif.el: Use lexical-binding.  Fix up cl-lib usage.

2014-06-28  K. Handa  <handa@gnu.org>

	Fix Bug#17739.

	* composite.el: Setup composition-function-table for dotted circle.
	(compose-gstring-for-dotted-circle): New function.

	* international/characters.el: Add category "^" to all
	non-spacing characters.

2014-06-28  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (doit): Remove force rule.
	(custom-deps, finder-data, autoloads, update-subdirs)
	(compile-one-process): PHONY targets do not need force rules.

	* Makefile.in (compile-main, compile, compile-always):
	No need to explicitly pass variables to ourself in recursive calls.

2014-06-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (minibuffer-with-setup-hook): Evaluate the first arg eagerly.

2014-06-26  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (update-authors): Update for moved authors.el.

2014-06-26  Leo Liu  <sdl.web@gmail.com>
